--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
-    "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-community/datetimepicker": "3.5.2",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~43.0.2",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.3",
+    "expo-dev-client": "~0.6.3",
     "expo-file-system": "~13.0.3",
     "expo-font": "~10.0.3",
     "expo-linking": "~2.4.2",
@@ -27,13 +29,18 @@
     "expo-sqlite": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-date-picker": "^4.1.1",
+    "react-native-maps": "0.28.1",
+    "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
-    "react-simple-timefield": "^3.2.5"
+    "react-simple-timefield": "^3.2.5",
+    "xcode": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
